Added Testimonials and FAQ  commit -m @Added Testimonials and FAQ

--- a/index.html
+++ b/index.html
@@ -26,5 +26,33 @@
         </div>
     </section>
     
+    <section>
+        <div class="FAQ">
+            <p>FAQ</p>
+            <h2>Have a Question?</h2>
+            <img src="img/Loza.svg" alt="Grapes">
+            <details>
+                <summary>Are you a wholesale wine supplier?</summary>
+                <p>Our winery produces craft wine. Bulk orders are possible, but lots cannot be large.</p>
+            </details>
+            <details>
+                <summary>Do you ship wine within the USA?</summary>
+                <p>Yes, we ship your orders to any state and city in the United States, as well as abroad.</p>
+            </details>
+            <details>
+                <summary>How many varieties are there in your winery?</summary>
+                <p>Our winery offers wine-lovers more than 10 different varieties of wines with different aging periods.</p>
+            </details>
+            <details>
+                <summary>Do you advise on the choice of wine?</summary>
+                <p>Yes. Our winery experts will tell you more about the varieties and help you choose the best option for you.</p>
+            </details>
+            <details>
+                <summary>Where are your vineyards located?</summary>
+                <p>We are located in the Napa Valley, America's most famous wine region.</p>
+            </details>
+            <img src="img/red-wine.webp" width ="200" alt="Red Wine">
+        </div>
+    </section>
 </body>
 </html>
