Added Icon Panel

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Wine Store</title>
 </head>
 <body>
@@ -54,5 +55,37 @@
             <img src="img/red-wine.webp" width ="200" alt="Red Wine">
         </div>
     </section>
+        <div class="icon-panel">
+            <div class="shipping-icon">
+                <img src="img/shipping-icon.svg" width="50" alt="Shipping Icon">
+                <h3>Fast & Free Shipping</h3>
+                <div class="orange-divider">
+                </div>
+                <p>We offer free delivery to any American city and abroad for all orders over $99.</p>
+            </div>
+            <div class="payment-icon">
+                <img src="img/payment-icon.svg" width="50" alt="Payment Icon">
+                <h3>Secure Payments</h3>
+                <div class="orange-divider">
+                </div>
+                <p>We accept Visa and MasterCard, PayPal, Trustly, and other payment methods.</p>
+            </div>
+            <div class="eco-icon">
+                <img src="img/eco-icon.svg" width="50" alt="Eco-Friendly Icon">
+                <h3>Eco-Friendly</h3>
+                <div class="orange-divider">
+                </div>
+                <p>We do not use chemical additives or aggressive fertilizers. Our wines are 100% organic.</p>
+            </div>
+            <div class="discount-system-icon">
+                <img src="img/discount-system.svg" width="50" alt="Discount System Icon">
+                <h3>Discount System</h3>
+                <div class="orange-divider">
+                </div>
+                <p>Sign up to get a 15% discount on your next order and get advantage of our special offers.</p>
+            </div>
+
+        </div>
+  
 </body>
 </html>
