Change folder on Image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
         <p>Testimonials</p>
         <h2>What Our Wine-Lovers Say</h2>
-        <img src="img/Loza.svg" width="150" alt="Grapes">
+        <img src="image/Loza.svg" width="150" alt="Grapes">
         <p>Wine is a bottled poetry. Read some stories from our customers below.</p>
         <div class="carousel-reviews">
             <div class="slide-1">
@@ -31,7 +31,7 @@
         <div class="FAQ">
             <p>FAQ</p>
             <h2>Have a Question?</h2>
-            <img src="img/Loza.svg" alt="Grapes">
+            <img src="image/Loza.svg" alt="Grapes">
             <details>
                 <summary>Are you a wholesale wine supplier?</summary>
                 <p>Our winery produces craft wine. Bulk orders are possible, but lots cannot be large.</p>
@@ -52,33 +52,33 @@
                 <summary>Where are your vineyards located?</summary>
                 <p>We are located in the Napa Valley, America's most famous wine region.</p>
             </details>
-            <img src="img/red-wine.webp" width ="200" alt="Red Wine">
+            <img src="image/red-wine.webp" width ="200" alt="Red Wine">
         </div>
     </section>
         <div class="icon-panel">
             <div class="shipping-icon">
-                <img src="img/shipping-icon.svg" width="50" alt="Shipping Icon">
+                <img src="image/shipping-icon.svg" width="50" alt="Shipping Icon">
                 <h3>Fast & Free Shipping</h3>
                 <div class="orange-divider">
                 </div>
                 <p>We offer free delivery to any American city and abroad for all orders over $99.</p>
             </div>
             <div class="payment-icon">
-                <img src="img/payment-icon.svg" width="50" alt="Payment Icon">
+                <img src="image/payment-icon.svg" width="50" alt="Payment Icon">
                 <h3>Secure Payments</h3>
                 <div class="orange-divider">
                 </div>
                 <p>We accept Visa and MasterCard, PayPal, Trustly, and other payment methods.</p>
             </div>
             <div class="eco-icon">
-                <img src="img/eco-icon.svg" width="50" alt="Eco-Friendly Icon">
+                <img src="image/eco-icon.svg" width="50" alt="Eco-Friendly Icon">
                 <h3>Eco-Friendly</h3>
                 <div class="orange-divider">
                 </div>
                 <p>We do not use chemical additives or aggressive fertilizers. Our wines are 100% organic.</p>
             </div>
             <div class="discount-system-icon">
-                <img src="img/discount-system.svg" width="50" alt="Discount System Icon">
+                <img src="image/discount-system.svg" width="50" alt="Discount System Icon">
                 <h3>Discount System</h3>
                 <div class="orange-divider">
                 </div>
