Added newslatter form

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     
-    <section>
-        <p>Testimonials</p>
+    <section class="testimonials">
+        <p class="testimonials-title">Testimonials</p>
         <h2>What Our Wine-Lovers Say</h2>
         <img src="image/Loza.svg" width="150" alt="Grapes">
         <p>Wine is a bottled poetry. Read some stories from our customers below.</p>
@@ -28,8 +28,8 @@
     </section>
     
     <section>
-        <div class="FAQ">
-            <p>FAQ</p>
+        <div class="faq">
+            <p class="faq-title">FAQ</p>
             <h2>Have a Question?</h2>
             <img src="image/Loza.svg" alt="Grapes">
             <details>
@@ -84,8 +84,19 @@
                 </div>
                 <p>Sign up to get a 15% discount on your next order and get advantage of our special offers.</p>
             </div>
-
         </div>
-  
+    </main>
+    <footer>
+        <div class="newsletter">
+            <p class="newsletter-title">Join</p>
+            <h4>Join Our Newsletter Now</h4>
+            <p>Learn more about wines and our special offers with our weekly digests.</p>
+            <form action="#">
+                <input type="text" placeholder="Enter your email adress">
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+
+    </footer>  
 </body>
 </html>
